// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-js snapshot check to ensure test stability @defer crossselection 1`] = `
{
  "data": {
    "person": {
      "gender": "male",
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer if 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "birth_year": "19BBY",
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "id": "0",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer label simple 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "label": "INLINE",
        "path": [
          "person",
        ],
      },
      {
        "id": "1",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
        {
          "id": "1",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "id": "0",
        },
        {
          "data": {
            "birth_year": "19BBY",
          },
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer multiple fragments 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
      {
        "id": "1",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
        {
          "id": "1",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "id": "0",
        },
        {
          "data": {
            "birth_year": "19BBY",
          },
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer nested 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
          },
          "id": "0",
        },
      ],
      "pending": [
        {
          "id": "1",
          "path": [
            "person",
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "1",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "films": [
              {
                "title": "A New Hope",
              },
              {
                "title": "The Empire Strikes Back",
              },
              {
                "title": "Return of the Jedi",
              },
              {
                "title": "Revenge of the Sith",
              },
            ],
          },
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on fragment 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
            "gender": "male",
          },
          "id": "0",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on inline fragment 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
            "gender": "male",
          },
          "id": "0",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on list 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [
          {},
          {},
          {},
          {},
        ],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
          "films",
          0,
        ],
      },
      {
        "id": "1",
        "path": [
          "person",
          "films",
          1,
        ],
      },
      {
        "id": "2",
        "path": [
          "person",
          "films",
          2,
        ],
      },
      {
        "id": "3",
        "path": [
          "person",
          "films",
          3,
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
        {
          "id": "1",
        },
        {
          "id": "2",
        },
        {
          "id": "3",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "title": "A New Hope",
          },
          "id": "0",
        },
        {
          "data": {
            "title": "The Empire Strikes Back",
          },
          "id": "1",
        },
        {
          "data": {
            "title": "Return of the Jedi",
          },
          "id": "2",
        },
        {
          "data": {
            "title": "Revenge of the Sith",
          },
          "id": "3",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on query with union 1`] = `
{
  "initialResult": {
    "data": {
      "search": [
        {
          "__typename": "Person",
        },
        {
          "__typename": "Person",
        },
        {
          "__typename": "Planet",
          "name": "Felucia",
        },
        {
          "__typename": "Planet",
          "name": "Sullust",
        },
        {
          "__typename": "Species",
          "name": "Sullustan",
        },
        {
          "__typename": "Transport",
          "name": "Raddaugh Gnasp fluttercraft",
        },
        {
          "__typename": "Vehicle",
          "name": "Raddaugh Gnasp fluttercraft",
        },
      ],
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "search",
          0,
        ],
      },
      {
        "id": "1",
        "path": [
          "search",
          1,
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
        {
          "id": "1",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "name": "Luke Skywalker",
          },
          "id": "0",
        },
        {
          "data": {
            "name": "Luminara Unduli",
          },
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer overlapping fragment 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
      {
        "id": "1",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
        {
          "id": "1",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "id": "0",
        },
        {
          "data": {
            "birth_year": "19BBY",
          },
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer skip/include 1`] = `
{
  "data": {
    "person": {
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream basic 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
          "films",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "A New Hope",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream if 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
        "starships": [
          {
            "name": "X-wing",
          },
          {
            "name": "Imperial shuttle",
          },
        ],
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
          "films",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "A New Hope",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream initialCount 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [
          {
            "title": "A New Hope",
          },
          {
            "title": "The Empire Strikes Back",
          },
        ],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "label": "FILMS",
        "path": [
          "person",
          "films",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream inside @defer 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
          },
          "id": "0",
        },
      ],
      "pending": [
        {
          "id": "1",
          "path": [
            "person",
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "1",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "data": {
            "films": [],
          },
          "id": "1",
        },
      ],
      "pending": [
        {
          "id": "2",
          "path": [
            "person",
            "films",
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "2",
          "items": [
            {
              "title": "A New Hope",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "2",
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "2",
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "2",
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "2",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream label 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
        "starships": [],
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "label": "FILMS",
        "path": [
          "person",
          "films",
        ],
      },
      {
        "id": "1",
        "label": "STARSHIPS",
        "path": [
          "person",
          "starships",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "A New Hope",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "1",
          "items": [
            {
              "name": "X-wing",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "1",
          "items": [
            {
              "name": "Imperial shuttle",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "1",
        },
      ],
      "hasNext": true,
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream multiple 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
        "starships": [],
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
          "films",
        ],
      },
      {
        "id": "1",
        "path": [
          "person",
          "starships",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "A New Hope",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "1",
          "items": [
            {
              "name": "X-wing",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "1",
          "items": [
            {
              "name": "Imperial shuttle",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "1",
        },
      ],
      "hasNext": true,
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream nested 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
          "films",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "1",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "planets": [],
              "title": "A New Hope",
            },
          ],
        },
        {
          "id": "1",
          "items": [
            {},
            {},
            {},
          ],
        },
      ],
      "pending": [
        {
          "id": "1",
          "path": [
            "person",
            "films",
            0,
            "planets",
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "2",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "planets": [],
              "title": "The Empire Strikes Back",
            },
          ],
        },
        {
          "id": "2",
          "items": [
            {},
            {},
            {},
            {},
          ],
        },
      ],
      "pending": [
        {
          "id": "2",
          "path": [
            "person",
            "films",
            1,
            "planets",
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "3",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "planets": [],
              "title": "Return of the Jedi",
            },
          ],
        },
        {
          "id": "3",
          "items": [
            {},
            {},
            {},
            {},
            {},
          ],
        },
      ],
      "pending": [
        {
          "id": "3",
          "path": [
            "person",
            "films",
            2,
            "planets",
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "4",
        },
      ],
      "hasNext": true,
      "incremental": [
        {
          "id": "0",
          "items": [
            {
              "planets": [],
              "title": "Revenge of the Sith",
            },
          ],
        },
        {
          "id": "4",
          "items": [
            {},
            {},
            {},
            {},
            {},
            {},
            {},
            {},
            {},
            {},
            {},
            {},
            {},
          ],
        },
      ],
      "pending": [
        {
          "id": "4",
          "path": [
            "person",
            "films",
            3,
            "planets",
          ],
        },
      ],
    },
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream/defer errors 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "bubblingListError": null,
        "name": "Luke Skywalker",
      },
    },
    "errors": [
      [GraphQLError: Bubbling in list!],
    ],
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "person",
        ],
      },
    ],
  },
  "subsequentResults": [
    {
      "completed": [
        {
          "id": "0",
        },
      ],
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "bubblingError": null,
          },
          "errors": [
            [GraphQLError: Bubbling!],
          ],
          "id": "0",
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability benchmark kitchen-sink query 1`] = `
{
  "data": {
    "empireHero": {
      "birth_year": "19BBY",
      "gender": "male",
      "height": 172,
      "mass": 77,
      "name": "Luke Skywalker",
      "starships": [
        {
          "name": "X-wing",
        },
        {
          "name": "Imperial shuttle",
        },
      ],
    },
    "jediHero": {
      "birth_year": "41.9BBY",
      "gender": "male",
      "name": "Darth Vader",
      "starships": [
        {
          "name": "TIE Advanced x1",
        },
      ],
    },
  },
}
`;
